tests/snapshots/sfc/ts/script_setup__v_model_with_named_prop_on_component_with_ref_binding.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createBlock as _createBlock } from "vue"

import { ref } from 'vue';
import MyEditor from './MyEditor.vue';


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const content = ref('');
const title = ref('Untitled');

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createBlock(MyEditor, {
    modelValue: content.value,
    "onUpdate:modelValue": _cache[0] || (_cache[0] = ($event: any) => ((content).value = $event)),
    title: title.value,
    "onUpdate:title": _cache[1] || (_cache[1] = ($event: any) => ((title).value = $event))
  }, null, 8 /* PROPS */, ["modelValue", "title"]))
}
}

})
