tests/snapshots/sfc/ts/script_setup__withdefaults_with_optional_props.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


interface Props {
  msg: string
  count?: number
  disabled?: boolean
}

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    msg: { type: String },
    count: { type: Number, required: false, default: 0 },
    disabled: { type: Boolean, required: false, default: false }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(__props.msg), 1 /* TEXT */))
}
}

})
